Added docs for v0.0.20, minor changes; spelling and grammar misstakes corrected.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="alpha">
             <h2>Alpha</h2>
             <div class="boxa">
+                <a href="v/0.0.20/index.html">v0.0.20</a>
                 <a href="v/0.0.19/index.html">v0.0.19</a>
                 <a href="v/0.0.12/index.html">v0.0.12</a>
             </div>
