--- a/v/0.0.12/index.html
+++ b/v/0.0.12/index.html
@@ -37,25 +37,25 @@
     <div id="container">
         <div id="main-header">
             <!-- Badge Colors currently are: green (release), orange(beta) red(alpha) -->
-            <h1>Intranet Documentation <sup><badge class="blue version">0.0.12</badge></sup></h1>
+            <h1>Intranet Documentation <sup><badge class="red version">0.0.12</badge></sup></h1>
             <p>This is the only official Documentation for the Intranet Project. You can check each version by simply adding the version number in the URL (only works for betas and releases). For Example: <b>/v/0.1.0/</b> There you can find the changelog for each version, too.</p>
             <p>This documentation will show you how to get started with the basic setup and what is important where you have to watch out during setup.</p>
         </div>
         <div class="documentation">
             <section id="gettingstarted">
                 <h2>So let's get started!</h2>
-                <p>There are some things you want to pay attention to. First let's clear out how out version system works: <b>e.g. v0.0.4</b> This is an alpha release. We tend to keep up the repository up to date, as good as possible to clear out and issues with merging. In the alpha release we do not guarantee any functionality or support for any versions. If we take for example our version v0.0.2, you can see that the whole PHP/MySQL part is coded with the MySQL extensions for PHP. That is no longer supported in PHP6, so our scripts won't work on the following PHP versions. In v.0.0.8 we started moving towards MySQLi, which will stay supported at least for the next PHP version.</p>
-                <p>Let's take another version number: <b>v0.1.2</b>. All that means is that we got is the fact, that the last Beta release is two alphas away. If you want to be sure about your version support, then you should use one of the releases. If you do not care that much and believe, that the Beta builds are good enough, then you can go with those.</p>
-                <p>And we got another version format to check out: <b>v1.4.32</b>. That is pretty simple as well. That basically means, that we are 4 Betas and 32 Alphas past the last release. In a release we tested and experienced the features so we can guarantee maximum safety and reliability.</p>
-                <p><b>So to keep it short:</b> The first digit is the official release, where we can say that everything works fine. The second is the Beta. Here we don't exactly know if everything is working correctly, so we are testing it first. And the third one is basically just interesting if you're a developer yourself.</p>
+                <p>There are some things you should to pay attention to. First, let's clear out how our version system works: <b>e.g. v0.0.4</b> This is an alpha release. We tend to keep the repository up to date, as good as possible to clear out any issues with merging. In the alpha release we do not guarantee any functionality or support for any versions. Looking at our version v0.0.2, you can see that the whole PHP/MySQL part is coded with the MySQL extensions for PHP. That is no longer supported in PHP6, so our scripts won't work on the following PHP versions. In v.0.0.8 we started moving towards MySQLi, which will stay supported at least for the next PHP version.</p>
+                <p>Let's take another version number: <b>v0.1.2</b>. All that means is that the last Beta release is two alphas away. If you want to be sure about your version support, then you should use one of the releases. If you do not care that much and believe, that the Beta builds are good enough, then you can go with those.</p>
+                <p>And we got another version format to check out: <b>v1.4.32</b>. This version is pretty simple as well. It basically means, that we are 4 Betas and 32 Alphas past the last release. In a release we tested and experienced the features so that we can guarantee maximum safety and reliability.</p>
+                <p><b>To keep it short:</b> The first digit is the official release where we can say that everything works fine. The second is the Beta. Here we don't exactly know if everything is working correctly, so we are testing it first. And the third one is basically just interesting if you're a developer yourself.</p>
             </section>
             <hr style="width: 100%">
             <section id="hardware">
                 <h2>Hardware</h2>
-                <p>You need a webserver to run the Intranet on it. So therefore you need a small computer or a virtual machine on your PC that is always powered on when you need your Intranet. We developed the Project with the <b>RaspberryPi</b> as a Webserver in mind. In the following steps we will show you how to setup your Pi. We won't go over the hardware part, since there are a lot of good tutorials out there. <b>What Operating System do I need?</b> It really doesn't matter what you are using, but in our Tutorial we'll show you how to configure Rasbian, a Debian version for the Raspberry. As long as you have access to the console, you should be alright. <b>You can install more than the Intranet on the Pi! It is NOT fully occupied by it.</b></p>
+                <p>You need a webserver to run the Intranet on it. Therefore, you need a small computer or a virtual machine on your PC that is always powered on when you need your Intranet. We developed the Project with the <b>RaspberryPi</b> as a Webserver in mind. In the following steps we will show you how to setup your Pi. We won't inform you about the hardware, since there are a lot of good tutorials out there. <b>What Operating System do I need?</b> It really doesn't matter what you are using, but in our Tutorial we'll show you how to configure Rasbian, a Debian version for the Raspberry. As long as you have access to the console, you should be alright. <b>You can install more than the Intranet on the Pi! It is NOT fully occupied by it.</b></p>
                 <h3>So let's hop right in:</h3>
-                <p>You now should have a running Pi with console access. So let's start installing some software. But wait. If you want to skip this process, you can let our <a href="#">installation script</a> do it.</p>
-                <p>If you want to use it, we'll show you now how you can start it. Basically after that, you are good to go. You just have to run a basic command in the command line and follow the instructions:</p>
+                <p>You should now have a running Pi with console access. So let's start installing some software. But wait. If you want to skip this process, you can let our <a href="#">installation script</a> do it.</p>
+                <p>If you want to use it, we'll now show you how you can start it. After that, you are good to go. You just have to run a basic command in the command line and follow the instructions:</p>
                 <pre class="prettyprint linenums">
 get http://IntranetProject.net/setup/script/script.sh</pre>
                 <p>And that's all you need to do. Now you can enter the URL of your Pi in your Browsers URL-Bar and let the Database Setup script run everything. Click <a href="#hostname">here</a> if you want to know how to change the <b>hostname</b> of your Pi (different name in Network)</p>
@@ -64,15 +64,15 @@ get http://IntranetProject.net/setup/script/script.sh</pre>
             <hr style="width: 100%">
             <section id="software">
                 <h2>Software</h2>
-                <p>If you have your Hardware Setup and all the needed packages installed, you can start configuring your Intranet. Therefore you need to edit the following file: <b>php/config.php</b>. If you don't have visual access to your Pi (Remote Desktop) and only SSH connection, you can use "nano" to edit the files. Just type the following in your console and edit your configuration:</p>
+                <p>If you have your Hardware Setup and all the needed packages installed, you can start configuring your Intranet. Therefore you need to edit the following file: <b>php/config.php</b>. If you don't have visual access to your Pi (Remote Desktop) and only SSH connection, you can use "nano" to edit the files. Just type the following into your console and edit your configuration:</p>
                 <pre class="prettyprint linumuns">
 sudo nano /var/www/html/php/config.php</pre>
-                <p>edit the lines you want: If you want to change the language, edit the line for that. <b>Important!</b> You want to have a Database already created! If you don't have that done, follow here:</p>
+                <p>edit the lines you want: If you want to change the language, edit the line for that. <b>Important!</b> You want to have a Database already created! If you haven't done it yet, follow here:</p>
                 <h2>Create the Database:</h2>
-                <p>In your Browser, type <b>"&#60;hostname&#62;/phpmyadmin"</b>. Login with your credentials and you should be welcomed with this screen:</p>
+                <p>Type <b>"&#60;hostname&#62;/phpmyadmin"</b> In your Browser. Login with your credentials and you should be welcomed with this screen:</p>
                 <img style="width: 50%;" src="img/phpmyadmin_interface.png" />
                 <p>In the left Navbar click on "New" and create a new Database. Now you can go back to your config.php and insert the MySQL Data. After that visit the Pi in your Browser and let the setup script set the tables up.</p>
-                <p>After that you can reload the page and should be greeted with a login-page. Enter the standard user-information (user: root, password: root).<br><b>Important:</b> If you want a quick login, you can add a bookmark to your Browser with the following URL structure:</p>
+                <p>After that you can reload the page and you should be greeted with a login-page. Enter the standard user-information (user: root, password: root).<br><b>Important:</b> If you want a quick login, you can add a bookmark to your browser with the following URL structure:</p>
                 <pre class="prettyprint linenums">
 http://&lt;device&gt;/php/login.php?login=&lt;user&gt;&amp;password=&lt;pw&gt;</pre>
             </section>
@@ -86,11 +86,11 @@ http://&lt;device&gt;/php/login.php?login=&lt;user&gt;&amp;password=&lt;pw&gt;</
             <hr style="width: 100%;">
             <section id="ssh">
                 <h2>SSH</h2>
-                <p>If you need Console Access to your Pi, you can use SSH. In the following step you'll learn how to active SSH and connect to it from your Pc. For that you need a Software called Putty, which you can download <a target="_blank" href="http://www.putty.org/">here</a>. Enter your IP and press "Enter":</p>
+                <p>If you need Console Access to your Pi, you can use SSH. In the following step you'll learn how to activate SSH and connect to it from your Pc. For that you need a software called Putty which you can download <a target="_blank" href="http://www.putty.org/">here</a>. Enter your IP and press "Enter":</p>
                 <img src="img/putty_sett.png" />
                 <p>Now, enter "pi" as the user and enter your Password (default password is "raspberry" (you won't be able to see it, while typing)):</p>
                 <img src="img/putty_conn.png" />
-                <p><b>Important:</b> If you cannot connect immediately, you have to connect to your Pi with a Monitor and Mouse and Keyboard. Login and open up the Terminal. Enter: <b>sudo raspi-config" and search for the option "ssh" and be sure it is active.</b></p>
+                <p><b>Important:</b> If you cannot connect immediately, you have to connect to your Pi with a monitor and mouse and keyboard. Login and open up the Terminal. Enter: <b>sudo raspi-config" and search for the option "ssh" and be sure it is active.</b></p>
             </section>
             <hr style="width: 100%">
             <section id="hostname">
@@ -111,7 +111,7 @@ sudo nano /etc/hostname</pre>
             <hr style="width: 100%">
             <section id="modules">
                 <h2>Modules</h2>
-                <p>In our Project, it's all about the modules. The Barebone Intranet is only good for Usermanagment. So the modules are the important parts. Developed by us and the community, you can customize your Intranet perfectly to fit <b>your</b> needs. Installing modules is fairly easy. You have a Folder which you can access via <a href="#ftp">FTP</a>. The Folder is called <b>/Interface/modules</b>. In there, you drop your module. If the module you've downloaded has a "php" folder with an "interface_xxx.php", drop it in the existing "php" folder. Then you should be good to go. We planned to add an installer to make it even easier for you. Any file with "interface_xxx.php" have content that will be shown on your Dashboard. </p>
+                <p>In our Project, it's all about the modules. The Barebone Intranet is only good for Usermanagment. That's why the modules are the important parts. Developed by us and the community, you can customize your Intranet perfectly to fit <b>your</b> needs. Installing modules is fairly easy. You have a Folder which you can access via <a href="#ftp">FTP</a>. The Folder is called <b>/Interface/modules</b>. In there, you drop your module. If the module you've downloaded has a "php" folder with an "interface_xxx.php", drop it in the existing "php" folder. Then you should be good to go. We planned to add an installer to make it even easier for you. Any file with "interface_xxx.php" have content that will be shown on your Dashboard. </p>
 
             </section>
             <hr style="width: 100%">
@@ -128,14 +128,14 @@ apt-get install apache2 apache2-doc apache2-utils
 apt-get install libapache2-mod-php5 php5 php-pear php5-xcache
 apt-get install php5-mysql
 apt-get install mysql-server mysql-client</pre>
-                <p>During the process you'll be asked to give a password. You need to remember that. Now, that everything is installed correctly we can continue by putting our main Intranet in the folder of the apache Webserver. Connect of <a href="#ftp">FTP</a> to your Pi and download the version you want from our <a href="https://github.com/IntranetProject/intranet_frontend/releases">GitHub Release Page</a>. Navigate to the <b>/var/www/</b> folder and delete the html folder. Unzip the downloaded package and rename the folder to "html". Now you can move it onto your Pi.</p>
+                <p>During the process you'll be asked to give a password. You need to remember it. Now, that everything is installed correctly we can continue by putting our main Intranet in the folder of the apache Webserver. Connect of <a href="#ftp">FTP</a> to your Pi and download the version you want from our <a href="https://github.com/IntranetProject/intranet_frontend/releases">GitHub Release Page</a>. Navigate to the <b>/var/www/</b> folder and delete the html folder. Unzip the downloaded package and rename the folder to "html". Now you can move it onto your Pi.</p>
             </section>
             <hr style="width: 100%">
             <section id="developers">
                 <h2>Developer:</h2>
                 <p>You want to develop your own module? No worries, we'll guide you through this.</p>
                 <p>But what requirements do you need? It's good if you have some PHP knowledge, but it's not required. You can go with a fully JavaScript module, but for Database connection, it's good to have some PHP knowledge.</p>
-                <p>Now let's have a look at the important part of the Template.php, which you can find in the "Interface/modules" folder. There are only 2 important lines, you should know about. Line 1 and line 100. In line 100 you paste your code. The structure around are mainly things as the navbar and imports. In line 1, you'll find this:</p>
+                <p>Now let's have a look at the important part of the Template.php, which you can find in the "Interface/modules" folder. There are only 2 important lines, you should know about. Line 1 and line 100. In line 100 you paste your code. The structures around are mainly things as the navbar and imports. In line 1, you'll find this:</p>
                 <pre class="prettyprint linenums">
 &lt;?php include 'php/basics.php'; ?&gt;</pre>
                 <p>As you can probably tell, there is a file getting imported. Now let's have a look at that file, you can find it in the "Interface/modules/php" folder.</p>
@@ -155,7 +155,7 @@ if (($_SESSION['login'])) {
                 <p>Notice, we're importing the config.php and starting a session to check if the user is logged in or not (if he has access or not).</p>
                 <p>Now that's basically all you need to know if you want to get started. But we'll give you some more information that could be helpful.</p>
                 <h4 id="variables">Variables:</h4>
-                <p>There are some useful information about the logged-in user in the session variables and normal PHP vars. Those should never be overwritten!</p>
+                <p>There is some useful information about the logged-in user in the session variables and normal PHP vars. Those should never be overwritten!</p>
                 <table>
                     <tr>
                         <th>Variable Name</th>
